media queries - fixing images, spacing, and floats

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,8 @@ img {
 	width: 345px;
 	border: 1px solid #02293e;
 	border-radius: 8px;
-	margin: 10px 0 20px 0;
+	float: right;
+	margin: 10px 10px 20px 10px;
 }
 
 
@@ -637,6 +638,17 @@ div#approach li {
 @media (max-width: 480px) { 
 	#bottom-spacing {
 		margin-bottom: 0;
+	}
+
+	#profile {
+		height: auto;
+		width: 155px;
+	}
+
+	#desktop {
+		border: 1px solid #02293e;
+		border-radius: 8px;
+		margin: 10px 0 20px 0;
 	}
 
 	#logo{
